--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Client:Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Dob)
+                @Html.DisplayFor(modelItem => item.Birthday)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
