--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.InterestAppliedDate)
+            @Html.DisplayFor(modelItem => item.appliedDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Balance)
