--- a/Views/NewUser/GenerateNewClients.cshtml
+++ b/Views/NewUser/GenerateNewClients.cshtml
@@ -1,9 +1,4 @@
 ﻿@using Exsm3945_Assignment.Models.Exceptions
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
 
 <h1>Create A New User To Open Your Account!</h1>
 <p>@(ViewData["AccountTypes"] as string)</p>
@@ -22,9 +17,14 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label class="control-label">Type of Account:</label>
+        <select name="acc_TypeId" class="form-control" asp-items="ViewBag.AccountTypes"></select>
+        
+    </div>
+@*    <div class="form-group">
+        <label class="control-label">Type of Account:</label>
         <input type="text" class="form-control" name="acc_TypeId" />
     </div>
-    <div class="form-group">
+*@    <div class="form-group">
         <label class="control-label">First Name:</label>
         <input type="text" class="form-control" name="c_FirstName" />
     </div> 
