--- a/Views/NewUser/GenerateNewClients.cshtml
+++ b/Views/NewUser/GenerateNewClients.cshtml
@@ -15,6 +15,12 @@
 }
 <form asp-action="DoTheGeneration">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    @{
+        string today = DateTime.Now.ToString("yyyy-MM-dd");
+    }
+
+
     <div class="form-group">
         <label class="control-label">Type of Account:</label>
         <select name="acc_TypeId" class="form-control" asp-items="ViewBag.AccountTypes"></select>
@@ -34,7 +40,7 @@
     </div>
     <div class="form-group">
         <label class="control-label">Date Of Birth:</label>
-        <input type="text" class="form-control" name="c_DoB" />
+        <input name="c_Dob" type="date" class="form-control" min="1900-01-01"
     </div>
     <div class="form-group">
         <label class="control-label">Home Address:</label>
