Doubled check to see if I miss anything and added some css;

--- a/Views/Account/Edit.cshtml
+++ b/Views/Account/Edit.cshtml
@@ -14,17 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="ClientId" class="control-label"></label>
+                <label asp-for="ClientId" class="control-label">Client Id</label>
                 <select asp-for="ClientId" class="form-control" asp-items="ViewBag.ClientId"></select>
                 <span asp-validation-for="ClientId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AccountTypeId" class="control-label"></label>
+                <label asp-for="AccountTypeId" class="control-label">Account Type Id</label>
                 <select asp-for="AccountTypeId" class="form-control" asp-items="ViewBag.AccountTypeId"></select>
                 <span asp-validation-for="AccountTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InterestAppliedDate" class="control-label"></label>
+                <label asp-for="InterestAppliedDate" class="control-label">Interest Applied Date</label>
                 <input asp-for="InterestAppliedDate" class="form-control" />
                 <span asp-validation-for="InterestAppliedDate" class="text-danger"></span>
             </div>
