--- a/Views/Account/Details.cshtml
+++ b/Views/Account/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InterestAppliedDate)
+            Interest Date Applied
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InterestAppliedDate)
@@ -23,7 +23,7 @@
             @Html.DisplayFor(model => model.Balance)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountType)
+            Account Type Id
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AccountType.Id)
