--- a/Views/AccountType/Edit.cshtml
+++ b/Views/AccountType/Edit.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InterestRate" class="control-label"></label>
+                <label asp-for="InterestRate" class="control-label">Interest Rate</label>
                 <input asp-for="InterestRate" class="form-control" />
                 <span asp-validation-for="InterestRate" class="text-danger"></span>
             </div>
