--- a/Views/NewUser/GenerateNewClients.cshtml
+++ b/Views/NewUser/GenerateNewClients.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Exsm3945_Assignment.Models.Exceptions
 
-<h1>Create A New User To Open Your Account!</h1>
+<h1>Register User: Index</h1>
 <p>@(ViewData["AccountTypes"] as string)</p>
 <p>@ViewBag.TestBag</p>
 
@@ -40,7 +40,7 @@
     </div>
     <div class="form-group">
         <label class="control-label">Date Of Birth:</label>
-        <input name="c_Dob" type="date" class="form-control" min="1900-01-01"
+        <input name="c_Dob" type="date" class="form-control" min="1900-01-01" />
     </div>
     <div class="form-group">
         <label class="control-label">Home Address:</label>
