--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,5 +14,32 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    font: "Trebuchet MS", Verdana, sans-serif;
+    background-color: #fc9403;
+    color: #696969;
+    margin-bottom: 60px;
+}
+
+li, h1, label {
+    color: #030100;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 18px;
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    background-image:;
+}
+
+.nav-item:hover {
+    opacity: .5;
 }
